<resources>

    <string name="appName">GraphicEditor</string>
    <string name="buttonGallery">Gallery</string>
    <string name="buttonCamera">Camera</string>
    <string name="imageContentDescription">Just Image</string>
    <string name="permissionDenied">Permission denied</string>
    <string name="saveImage">Save image</string>
    <string name="filters">Filters</string>
    <string name="button" translatable="false">Button</string>
    <string name="about" translatable="false">About</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <string-array name="itemList">
        <item>-Not chosen-</item>

        <item>KK</item>
        <item>Rotate picture for 90 degrees</item>
    </string-array>

    <string-array name="difFilters">
        <item>@string/none</item>
        <item>@string/sepia</item>
        <item>@string/grayFilter</item>
        <item>@string/diagonalSepia</item>
        <item>@string/blueFilter</item>
        <item>@string/redFilter</item>
        <item>@string/greenFilter</item>
        <item>@string/swapColors</item>
        <item>@string/negative</item>
        <item>@string/blur</item>
        <item>@string/edgeDetection</item>
        <item>@string/emboss</item>
        <item>@string/someFilter</item>
        <item>@string/unsharp</item>
    </string-array>
    <string name="blueFilter">Blue filter</string>
    <string name="grayFilter">Gray filter</string>
    <string name="sepia">Sepia</string>
    <string name="zooming">Zooming</string>
    <string name="rotate90">Rotate picture for 90 degrees</string>
    <string name="none">-Not chosen-</string>
    <string name="spinner">Spinner selected: %s</string>
    <string name="savedImage">Image has been saved to %s</string>
    <string name="redFilter">Red filter</string>
    <string name="greenFilter">Green filter</string>
    <string name="swapColors">Swap colors</string>
    <string name="negative">Negative</string>
    <string name="blur">Blur</string>
    <string name="edgeDetection">Edge detection</string>
    <string name="emboss">Emboss</string>
    <string name="someFilter">Some filter</string>
    <string name="unsharp">Unsharp</string>
    <string name="diagonalSepia">Diagonal sepia</string>
    <string name="draw">Draw</string>
    <string name="other">Other</string>
    <string name="transform">Transform</string>
    <string name="convertion">Coversion</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="defaultTxt">Default</string>
    <string name="_0_7">0.7</string>
    <string name="coefficient">Coefficient</string>
    <string name="sigma">Sigma</string>
    <string name="_1_0">1.0</string>
    <string name="_0_5">0.5</string>
    <string name="centering">Центрирование:</string>
    <string name="radius">Радиус:</string>
    <string name="rotatez">Rotate Z</string>
    <string name="go_back">Go back</string>
    <string name="upload">Upload</string>
    <string name="cube">Cube</string>
    <string name="face_recognition">Face recognition</string>
    <string name="zooming_parameter">Zooming parameter</string>
    <string name="rotating_parameter">Rotating parameter</string>
    <string name="applyTransform">Применить поворот/зум</string>
</resources>
