<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/colorTap"
    tools:context=".Fragments.FilterFragment">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:context=".filterFragment">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="400sp"
                    android:layout_height="400sp"
                    android:contentDescription="@string/imageContentDescription"
                    android:src="@drawable/ic_launcher_background"
                    app:srcCompat="@drawable/hippo" />


                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="1.0">

                    <LinearLayout
                        android:id="@+id/filtersLayoutFilt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/btnMain"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/model" />


                        <ImageButton
                            android:id="@+id/btnRed"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/redfilter" />

                        <ImageButton
                            android:id="@+id/btnGreen"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/greenfilter" />

                        <ImageButton
                            android:id="@+id/btnBlue"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/bluefilter" />

                        <ImageButton
                            android:id="@+id/btnGray"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/greyfilter" />


                        <ImageButton
                            android:id="@+id/btnDiagonal"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/diagonalsepia" />

                        <ImageButton
                            android:id="@+id/btnSwap"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/swapcolors" />

                        <ImageButton
                            android:id="@+id/btnNegative"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/negative" />

                        <ImageButton
                            android:id="@+id/btnBlur"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/blur" />

                        <ImageButton
                            android:id="@+id/btnEdge"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/edgedetection" />

                        <ImageButton
                            android:id="@+id/btnEmboss"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:adjustViewBounds="false"
                            android:background="@null"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/emboss" />


                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/textUnsharp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unsharp"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/unsharpSigma"
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="clip_vertical|start"
                        android:ems="10"
                        android:inputType="number"
                        android:shadowColor="@color/colorText"
                        android:text="@string/_1_0"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/sigma"
                        android:textColor="@color/colorText" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBarSigma"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundTint="#000000"
                    android:max="5000"
                    android:min="0"
                    android:progressBackgroundTint="#8C8C8C"
                    android:progressTint="#1F008D"
                    android:secondaryProgressTint="#FF0000"
                    android:thumbTint="@color/colorSeek" />

                <Button
                    android:id="@+id/unsharpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/unsharp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/koefK"
                        android:layout_width="127dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:ems="10"
                        android:inputType="number"
                        android:text="@string/_0_7"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/coefficient"
                        android:textColor="@color/colorText" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBarKoef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="1000"
                    android:min="0"
                    android:progressBackgroundTint="#8C8C8C"
                    android:progressTint="#1F008D"
                    android:thumbTint="@color/colorSeek" />

            </LinearLayout>
        </ScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>